# zk-fix

./: .dockerignore  Cargo.toml  README.md  deny.toml
core/node/eth_sender/src/: eth_tx_aggregator.rs
docker/local-node/: Dockerfile
local-setup/: clear.sh  docker-compose-dev.yml  docker-compose.yml  hyperexplorer.json  init.sql  start-dev.sh  start.sh
local-setup-test/: README.md  bandwidth.sh  hardhat.config.ts  package.json
local-setup-test/scripts/: run-many-user.ts  run.ts
local-setup-test/test/: main.test.ts
local-setup/blockscout/: common-frontend-dev.env
patches/sqlx-postgres/: Cargo.toml
patches/sqlx-postgres/src/types/: cube.rs
prover/: Cargo.toml
zk_toolbox/: Cargo.toml
zkmintlayer/: .dockerignore
zkmintlayer/contracts/l1-contracts/contracts/state-transition/chain-deps/facets/: Mailbox.sol
zkmintlayer/core/node/eth_sender/: Cargo.toml
zkmintlayer/core/node/eth_sender/src/: eth_tx_aggregator.rs  tests.rs
zkmintlayer/docker/local-node/: Dockerfile
